@@ -23,22 +23,25 @@ is_deeply $t->detect('application/x-gzip'),       ['gz'],       'right formats';
 is_deeply $t->detect('text/html'), ['htm', 'html'], 'right formats';
 is_deeply $t->detect('image/x-icon'), ['ico'], 'right formats';
 is_deeply $t->detect('image/jpeg'), ['jpeg', 'jpg'], 'right formats';
-is_deeply $t->detect('application/javascript'), ['js'],   'right formats';
-is_deeply $t->detect('application/json'),       ['json'], 'right formats';
-is_deeply $t->detect('audio/mpeg'),             ['mp3'],  'right formats';
-is_deeply $t->detect('video/mp4'),              ['mp4'],  'right formats';
-is_deeply $t->detect('audio/ogg'),              ['ogg'],  'right formats';
-is_deeply $t->detect('video/ogg'),              ['ogv'],  'right formats';
-is_deeply $t->detect('application/pdf'),        ['pdf'],  'right formats';
-is_deeply $t->detect('image/png'),              ['png'],  'right formats';
-is_deeply $t->detect('application/rss+xml'),    ['rss'],  'right formats';
-is_deeply $t->detect('image/svg+xml'),          ['svg'],  'right formats';
-is_deeply $t->detect('text/plain'),             ['txt'],  'right formats';
-is_deeply $t->detect('video/webm'),             ['webm'], 'right formats';
-is_deeply $t->detect('application/font-woff'),  ['woff'], 'right formats';
-is_deeply $t->detect('application/xml'),        ['xml'],  'right formats';
-is_deeply $t->detect('text/xml'),               ['xml'],  'right formats';
-is_deeply $t->detect('application/zip'),        ['zip'],  'right format';
+is_deeply $t->detect('application/javascript'), ['js'],    'right formats';
+is_deeply $t->detect('application/json'),       ['json'],  'right formats';
+is_deeply $t->detect('audio/mpeg'),             ['mp3'],   'right formats';
+is_deeply $t->detect('video/mp4'),              ['mp4'],   'right formats';
+is_deeply $t->detect('audio/ogg'),              ['ogg'],   'right formats';
+is_deeply $t->detect('video/ogg'),              ['ogv'],   'right formats';
+is_deeply $t->detect('application/pdf'),        ['pdf'],   'right formats';
+is_deeply $t->detect('image/png'),              ['png'],   'right formats';
+is_deeply $t->detect('application/rss+xml'),    ['rss'],   'right formats';
+is_deeply $t->detect('image/svg+xml'),          ['svg'],   'right formats';
+is_deeply $t->detect('text/plain'),             ['txt'],   'right formats';
+is_deeply $t->detect('video/webm'),             ['webm'],  'right formats';
+is_deeply $t->detect('application/font-woff2'), ['woff2'], 'right formats';
+is_deeply $t->detect('font/woff2'),             ['woff2'], 'right formats';
+is_deeply $t->detect('application/font-woff'),  ['woff'],  'right formats';
+is_deeply $t->detect('font/woff'),              ['woff'],  'right formats';
+is_deeply $t->detect('application/xml'),        ['xml'],   'right formats';
+is_deeply $t->detect('text/xml'),               ['xml'],   'right formats';
+is_deeply $t->detect('application/zip'),        ['zip'],   'right format';
 
 # Detect special cases
 is_deeply $t->detect('Application/Xml'), ['xml'], 'right formats';
