@@ -2,6 +2,7 @@
 8.03  2018-10-10
   - Fixed a small bug in Mojo::UserAgent where request timeouts could be created
     twice.
+  - Added WOFF2 MIME type. Added new Media types for woff and woff2 (berov)
 
 8.02  2018-10-01
   - Deprecated Mojo::Transaction::success in favor of Mojo::Transaction::result
